# teraboxsdk

./: GUIDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: async_usage.py  sync_usage.py  telegram_bot_usage.py
teraboxsdk/: __init__.py  _base_client.py  async_client.py  client.py  downloader.py  exceptions.py  http.py  models.py  utils.py
tests/: test_client.py  test_downloader.py  test_exceptions.py  test_models.py  test_utils.py
